2012-04-11  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-06
	* handle case where a d3pd block has a prefix_n or prefix_N but
	  no other corresponding prefix_xyz branch
	* M bin/atl-gen-athena-d3pd-reader

2012-04-10  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-05
	* change when forking happens to not lock in xrootd threads
	* fixes bug #93510
	* M python/AthFile/__init__.py
	* M python/AthFile/impl.py

2012-04-05  Graeme Andrew Stewart <graeme.andrew.stewart@cern.ch>
    * tagging PyUtils-00-12-04
    * add diffTAGFile.py script
    * A bin/diffTAGFile.py


2012-04-02  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-03
	* fix bug #93259: dont use multiprocessing but still fork
	* also install diff-athfile into InstallArea
	* M python/AthFile/_init_.py
	* M python/AthFile/impl.py

2012-03-30  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-02
	* fix bug #92267: remove LD_PRELOAD from env for AthFile-subprocesses
	* M python/AthFile/impl.py

2012-03-30  Frank Winklmeier  <fwinkl@cern>

	* tagging PyUtils-00-12-01
	* python/AmiLib.py (Client.find_pkg): Only show non-archived packages

2012-03-29  Sebastien Binet  <binet@cern.ch>

	* tagging PyUtils-00-12-00
	* needs AthenaCommon with modified ChapPy...
	* remove multiprocessing usage from AthFile
	* silence the TEnv warnings
	* add gprof2dot
	* M python/RootUtils.py
	* M python/AthFile/__init__.py
	* M python/AthFile/impl.py
	* M cmt/requirements
	* A bin/gprof2dot

2012-03-19  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-11-24
	* fix bug #92664: use argparse for vmem-sz
	* M bin/vmem-sz.py

2012-03-19  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-23
	* fix array argument passing
	* M bin/tcSubmitTag.py

2012-03-16  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-11-22
	* fix for 64b where dl module does not exist anymore
	* M bin/vmem-sz.py

2012-03-09  Sebastien Binet  <binet@voatlas51.cern.ch>
